solc_mutator_ossfuzz_seed_corpus/test_sol/test_3f6b9a7b0a2433e5532f86d949e507a90deab9c6860640210b46e57bbef08eae_bec3e1c7d01b3f24dea0b48af37a0573a3b4efbc_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes memory i0,uint96 i1)  returns(address o0)
{ }
function f1(bytes10 i0,bytes6 i1)  returns(uint232 o0,bytes memory o1)
{
  (address l0) = f0("26774ab82987aacb3be9e8541dbfad",((2772998553683483793094243784 - 72658981252096022228336308181) ** (o0 | (57938706161248645270824772041 & 15858134720657046106531268312))));
  {

  }
}
// ----
// TypeError 9553: (su0.sol:190-328): Invalid type for argument in function call. Invalid implicit conversion from int256 to uint96 requested.
